# lupehub

./: .gitignore  .lupeshared  AGENTS.md  Cargo.toml  lupe-smoke-test.md
lupe-cli/: Cargo.toml
lupe-cli/src/: main.rs
lupe-core/: Cargo.toml
lupe-core/src/: lib.rs
lupe-server/: Cargo.toml
lupe-server/src/: main.rs
scripts/: lupe-stop-hook.py
skills/lupe-agent/: SKILL.md
src/: main.rs
web/src/: App.tsx  Detail.tsx  Timeline.tsx  types.ts
